# mcp_invoice_server

./: L3.ipynb  L5.ipynb  README.md  main.py  parsed_invoices.csv  parser.py  pyproject.toml  requirements.txt
app/: image_agent.py  main.py  mcp_agent.py  parser.py  save_parsed_to_csv.py
client/: run_client.py
db/: setup_db.py
notebook/: gpt_mcp_server.ipynb
notebook/db/: invoices.db
output/: invoice_results.csv
src/: mcp_runtime.py  mcp_server.py
src/tools/: extract_invoice.py  validate_invoice.py
src/utils/: save_results.py
